--- a/frontend_framework/chatbot/templates/chatbot/chatbot.html
+++ b/frontend_framework/chatbot/templates/chatbot/chatbot.html
@@ -19,6 +19,7 @@
             <button type="submit">Send</button>
         </form>
     </div>
+    <script src="{% static 'chatbot/script.js' %}"></script>
 </body>
 
 </html>
