--- a/frontend_framework/chatbot/static/chatbot/style.css
+++ b/frontend_framework/chatbot/static/chatbot/style.css
@@ -1,75 +1,65 @@
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: "Alegreya Sans", sans-serif;
-}
-
-body {
-    background: #343541;
-}
-
 #app {
-    width: 100vw;
-    height: 100vh;
-    background: #343541;
-
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-between;
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
 }
+
+/* chat container */
 
 #chat_container {
-    flex: 1;
-    width: 100%;
-    height: 100%;
-    overflow-y: scroll;
-
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-
-    -ms-overflow-style: none;
-    scrollbar-width: none;
-
-    padding-bottom: 20px;
-    scroll-behavior: smooth;
+  height: 100%;
+  width: 100%;
+  overflow-y: scroll;
+  padding: 10px;
+  background-color: #f5f5f5;
+  border: 1px solid #ccc;
 }
 
-/* hides scrollbar */
-#chat_container::-webkit-scrollbar {
-    display: none;
+/* chat messages */
+.message {
+  margin: 10px;
+  padding: 10px;
+  background-color: #fff;
+  border-radius: 10px;
+  box-shadow: 0px 2px 3px rgba(0, 0, 0, 0.1);
+  
 }
 
-form {
-    width: 100%;
-    max-width: 1280px;
-    margin: 0 auto;
-    padding: 10px;
-    background: #40414f;
-
-    display: flex;
-    flex-direction: row;
-    gap: 10px;
+/* bot message */
+.wrapper.ai .message {
+  background-color: #dcf8c6;
 }
 
+/* text area */
 textarea {
-    width: 100%;
+  flex: 1;
+  height: 40px;
+  padding: 10px;
+  border: 1px solid #ccc;
+  resize: none;
+  border-radius: 5px;
+  font-size: 16px;
+  margin-right: 10px;
+  width: 100%;
+}
 
-    color: #fff;
-    font-size: 18px;
-
-    padding: 10px;
-    background: transparent;
-    border-radius: 5px;
-    border: none;
-    outline: none;
+/* form */
+form {
+  width: 100%;
+  max-width: 1280px;
+  margin: 0 auto;
+  padding: 10px;
+  background: transparent;
+  display: flex;
+  flex-direction: row;
 }
 
 button {
-    outline: 0;
-    border: 0;
-    cursor: pointer;
-    background: transparent;
+  outline: 0;
+  border: 0;
+  cursor: pointer;
+  background: transparent;
 }
