--- a/frontend_framework/chatbot/static/chatbot/style.css
+++ b/frontend_framework/chatbot/static/chatbot/style.css
@@ -41,7 +41,8 @@
 /* text area */
 textarea {
   flex: 1;
-  height: 40px;
+  min-height: 40px;
+  resize: none;
   padding: 10px;
   border: 1px solid #ccc;
   border-radius: 5px;
@@ -63,8 +64,26 @@ form {
 
 /* submit button */
 button {
+  width: fit-content;
   outline: 0;
   border: 0;
   cursor: pointer;
   background: transparent;
+}
+
+button:hover {
+  background-color: #f2f2f2;
+  border-radius: 5px;
+  box-shadow: 0px 0px 20px -18px;
+}
+
+button:active {
+  transform: scale(0.95);
+}
+
+#send-message {
+  width: auto;
+  height: auto;
+  max-width: 24px;
+  max-height: 24px;
 }
