--- a/frontend_framework/chatbot/static/chatbot/style.css
+++ b/frontend_framework/chatbot/static/chatbot/style.css
@@ -11,6 +11,9 @@
   flex-direction: column;
   align-items: center;
   justify-content: space-between;
+  position: fixed;
+  bottom: 0;
+  left: 0;
 }
 
 /* chat container */
@@ -20,6 +23,7 @@
   padding: 10px;
   background-color: #f5f5f5;
   border: 1px solid #ccc;
+  overflow-y: scroll;
 }
 
 .message-container {
